--- a/index.html
+++ b/index.html
@@ -4,22 +4,7 @@
 <title ></title> 
 </head>
 <body>
-<div id="canvas2">
-<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="106" height="100">
-<desc>Created with Raphaël</desc>
-<defs></defs>
- <image x="0" y="0" width="30" height="30" preserveAspectRatio="none" href="http://cs9491.vkontakte.ru/u17835/e_e5ecf9e4.jpg" style="cursor: move; fill-opacity: 0.6; " fill-opacity="0.6">
-</image>
- 
-<!-- 
-<a href="http://vkontakte.ru/id17835" target="_top">
-</a>
- -->
-</svg>
-</div>
-<div id="canvas">
-</div>
-
+<div id="canvas"></div>
 
 <!-- <script type="text/javascript" src="http://vk.com/js/lib/md5.js"></script> -->
 <script type="text/javascript" src="http://vkontakte.ru/js/api/xd_connection.js"></script>
@@ -35,34 +20,8 @@
 <script type="text/javascript" src="utility.js"></script>
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.4.js"></script>
 
-<!-- <script type="text/javascript" src="friends.js"></script> -->  
+<script type="text/javascript" src="friends.js"></script>
 
-<script type="text/javascript" >
-var graph = new Graph();
-
-var renderer = function(r,node) {
-	var color = Raphael.getColor();
-		set = r.set().push(r.image("http://cs9491.vkontakte.ru/u17835/e_e5ecf9e4.jpg", node.point[0], node.point[1], 30, 30)
-//				.attr({"href":"http://vkontakte.ru/id15325510","target":"_top"})
-		);
-	return set;
-};
-
-
-//var contact_text_color = app_user.friends[uid] ? "#4cbf9c" : "#aaaaaa";
-graph.addNode("111",{render:renderer});		
-
-
-var layouter = new Graph.Layout.Spring(graph);
-layouter.layout();
- 
-
-graph.edges.splice(0,graph.edges.length);
-/* draw the graph using the RaphaelJS draw implementation */
-var renderer = new Graph.Renderer.Raphael('canvas', graph, 106, 100);
-//renderer.draw();
-
-</script>
 
 </body>
 </html>
