change included javascript files for debugging purposes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" >
 <head>
+<!--  <script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>  -->
+
 <title ></title> 
 </head>
 <body>
@@ -13,13 +15,12 @@
 <!-- <script type="text/javascript" src="contact.js"></script> -->
 <!-- <script type="text/javascript" src="http://prototypejs.org/assets/2010/10/12/prototype.js"></script> -->
 
-<script type="text/javascript" src="js/raphael-min.js"></script>
+<script type="text/javascript" src="js/raphael.js"></script>
 <script type="text/javascript" src="js/dracula_graffle.js"></script>
 <script type="text/javascript" src="js/dracula_graph.js"></script>
 <script type="text/javascript" src="pallete.js"></script>
 <script type="text/javascript" src="utility.js"></script>
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.4.js"></script>
-
+<!--  <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.4.js"></script>  -->
 <script type="text/javascript" src="friends.js"></script>
 
 
