--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <script type="text/javascript" src="contact_loader.js"></script>
 
-<script type="text/javascript" src="js/raphael.js"></script>
+<script type="text/javascript" src="raphael/raphael.js"></script>
 <script type="text/javascript" src="utility.js"></script>
 <script type="text/javascript" src="friends.js"></script>
 
