--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" >
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:lang="en" lang="en" >
 <head>
 <title ></title> 
 </head>
@@ -10,10 +10,14 @@
 
 <script type="text/javascript" src="contact_loader.js"></script>
 
-<script type="text/javascript" src="raphael/raphael.js"></script>
 <script type="text/javascript" src="utility.js"></script>
 <script type="text/javascript" src="friends.js"></script>
 
+ 
+<svg id="area"   version="1.1">
+<defs>
+</defs>
+</svg>
 
 </body>
 </html>
