Setup svn window width to avoid clipping

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <script type="text/javascript" src="friends.js"></script>
 
  
-<svg id="area"   version="1.1">
+<svg id="area" width="607"   version="1.1">
 <defs>
 </defs>
 </svg>
