--- a/index.html
+++ b/index.html
@@ -1,17 +1,39 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:lang="en" lang="en" >
 <head>
-<title ></title> 
+  <title>Галерея друзей</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 <body>
 <div id="canvas"></div>
 
-<script type="text/javascript" src="http://vkontakte.ru/js/api/xd_connection.js"></script>
+<script type="text/javascript" src="//vkontakte.ru/js/api/xd_connection.js"></script>
 
 <script type="text/javascript" src="contact_loader.js"></script>
 
 <script type="text/javascript" src="utility.js"></script>
 <script type="text/javascript" src="friends.js"></script>
+
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div>
+      <ul class="nav navbar-nav">
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Справка<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li style="color:white"><h4 align="center">Тут Ваши друзья, сгруппированные по отношениям между собой</h2></li>
+            <li><a href="//vk.com/yegor1984" target="_blank">Автор: Егор Алексеев</a></li>
+            <li><a href='//github.com/yegor-alexeyev/gallery-of-contacts' target="_blank">Страница проекта на github.com</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
  
 <svg id="area" width="607"   version="1.1">
