--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
 
  
 <svg id="area" width="607" height="400" version="1.1">
+  <defs>
+    <radialGradient id="grad1" cx="50%" cy="50%" r="50%" fx="50%" fy="50%">
+      <stop offset="0%" style="stop-color:lime;" />
+      <stop offset="100%" style="stop-color:green;" />
+    </radialGradient>
+  </defs>
+
   <text id="notice" x="50" y="50">Идёт загрузка смежных контактов...</text>
   <path id="border"  transform="translate(225, 150)"/>
   <path id="loader"  transform="translate(225, 150) scale(.84)"/>
